Add Pbr shader biome (#371)